[gd_scene load_steps=5 format=3 uid="uid://ddxa0cdncrlx4"]

[ext_resource type="Script" uid="uid://bqmaw0dumqnfb" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://dam4qhpegl12k" path="res://scenes/select.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://bdeoj8kaiwij" path="res://scenes/your_card.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bexbngr23t4iq" path="res://scenes/chor_selection_scene.tscn" id="4_lbhrr"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwrxv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 450.0
offset_bottom = 175.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Water"

[node name="MessageBox" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 282.0
offset_top = 217.0
offset_right = 870.0
offset_bottom = 440.0
theme_override_font_sizes/normal_font_size = 32
text = "Wait of the Host to throw"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChitButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 390.0
offset_top = 276.0
offset_right = 758.0
offset_bottom = 387.0
theme_override_font_sizes/font_size = 32
text = "Throw the Chits"

[node name="Select" parent="." instance=ExtResource("2_yqjtg")]
visible = false
layout_mode = 1

[node name="YourCard" parent="." instance=ExtResource("3_lnu2h")]
visible = false
layout_mode = 1

[node name="ChorSelectionScene" parent="." instance=ExtResource("4_lbhrr")]
visible = false
layout_mode = 1

[node name="RajaButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 443.0
offset_top = 466.0
offset_right = 691.0
offset_bottom = 543.0
text = "Mera Wazir Kon Hai be "

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 19.0
offset_right = 1024.0
offset_bottom = 42.0
text = "Score"

[connection signal="pressed" from="ChitButton" to="." method="_on_chit_button_pressed"]
[connection signal="pressed" from="RajaButton" to="." method="_on_raja_button_pressed"]
